--- a/index.html
+++ b/index.html
@@ -128,9 +128,32 @@
             </div>
         </div>
 
+        <div class="menu_juego_vida">
+
+            <div class="opcion" id="actualizar_estado_marcador" onclick="actualizar_juego_vida(event)">
+                Iniciar juego
+            </div>
+
+            <div class="opcionBarra">
+                umbral de vida:  <br />
+                <input type="range" min="0" max="254" value="135" id="UmbralVida" step="1" onchange="actualizar_juego_vida(event)" />
+            </div>
+
+            <div class="opcion">
+                <a href="#" onclick="descargarArchivo(this)">Descargar</a>
+            </div>
+
+            <div class="opcionEspecial oculto">
+                dibujar
+                <p>detener  <input type="checkbox" id="puedeRellenar" onchange="actualizar_juego_vida()"/></p>
+                <p>Reanudar/iniciar<input type="checkbox" id="puedeTrazar" onchange="actualizar_juego_vida()" /></p>
+            </div>
+
+        </div>
+
         <div class="canvas" ondrop="soltar(event);" ondragover="sobre(event)">
             <!-- <canvas id="lienzo" width="1280" height="800"> -->
-            <canvas id="lienzo" width="128" height="128">
+            <canvas id="lienzo" width="256" height="256">
                 <p>Si estas viendo esto, puede que tu navegador no soporte la etiqueta canvas, o
                 estes usando un navegador tipo Thor</p>
             </canvas>
