[Integra] un buscador de archivos para añadir propios

--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                 <a href="#" onclick="descargarArchivo(this)">Descargar</a>
             </div>
 
+            <div class="opcion" >
+                Seleccionar imágen: <input type="file" id="imagen_personal" name="imagen_personal" onchange="agregar_imagen_personal(event)"/>
+            </div>
+
             <div class="opcionEspecial oculto">
                 dibujar
                 <p>detener  <input type="checkbox" id="puedeRellenar" onchange="actualizar_juego_vida()"/></p>
